--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   max-width: 100%;
   text-decoration: none;
+  scroll-behavior: smooth;
 }
 
 body{
@@ -29,4 +30,9 @@ body{
 
 .section_text{
   @apply font-bold text-center py-2 text-2xl md:text-3xl lg:text-[45px] pt-10
+}
+
+
+.footer {
+  @apply flex flex-col text-white gap-10 justify-center items-center my-16
 }
