--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -25,7 +25,7 @@ body{
 
 
 .nav_text{
-  @apply text-zinc-100 text-sm lg:text-lg font-normal
+  @apply text-zinc-100 text-sm lg:text-lg font-normal py-3
 }
 
 
